fix(hero): add opaciy to all fonts for better color blend and less harsh contrast

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -302,7 +302,7 @@ section.navbar {
     Hero section
 */
 section.hero {
-  color: $color-white;
+  color: $color-white-trans;
 
   .hero--copy {
     z-index: 6;
